Fix multiple scrollbar issue on Windows Chrome and Hero image width.

--- a/src/fortis-styles/variables/reset/_index.scss
+++ b/src/fortis-styles/variables/reset/_index.scss
@@ -5,5 +5,5 @@ $hu-reset-html-background-color: hu-get($hu-colors, neutral 0);
 $hu-reset-html-color: hu-get($hu-colors, neutral 900);
 // $hu-reset-html-font-size: $hu-f-rem-context;
 $hu-reset-html-line-height: hu-get($hu-line-height-types, 300);
-$hu-reset-html-overflow-y: scroll;
+$hu-reset-html-overflow-y: hidden;
 // $hu-reset-img-responsive: true;
